переверстан блок tech_spec на grid

--- a/src/style/media_models.css
+++ b/src/style/media_models.css
@@ -81,16 +81,16 @@
 }
 
 @media (max-width: 1200px) {
-    .tech_spec .tech_spec__description {
-        padding: 10px 30px 10px 30px;
-    }
-    .tech_spec .tech_spec__outfit .tech_spec__outfit-list {
-        margin-bottom: 20px;
-    }
+    /*.tech_spec .tech_spec__description {*/
+    /*    padding: 10px 30px 10px 30px;*/
+    /*}*/
+    /*.tech_spec .tech_spec__outfit .tech_spec__outfit-list {*/
+    /*    margin-bottom: 20px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item {
-        margin-bottom: 0;
-    }
+    /*.tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item {*/
+    /*    margin-bottom: 0;*/
+    /*}*/
 
     .tech_spec .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item .tech_spec__outfit-img {
         margin: 0 auto;
@@ -98,9 +98,9 @@
         width: 70px;
     }
 
-    .tech_spec__titles .text_spec__texts, .tech_spec__mission {
-        margin-bottom: 20px !important;
-    }
+    /*.tech_spec__titles .text_spec__texts, .tech_spec__mission {*/
+    /*    margin-bottom: 20px !important;*/
+    /*}*/
 }
 
 @media (max-width: 835px) {
@@ -221,7 +221,7 @@
         position: absolute;
         width: 100%;
         max-width: fit-content;
-        top: 75px;
+        /*top: 75px;*/
         left: 0;
         backdrop-filter: blur(6px);
         border: 1px solid white;
@@ -258,6 +258,21 @@
     }
 }
 
+@media (max-width: 440px) {
+    .tech_spec {
+        width: 100%;
+    }
+
+    .tech_spec.active {
+        width: fit-content;
+    }
+
+    .tech_spec .tech_spec__wrapper {
+        display: block;
+        position: static;
+    }
+}
+
 @media (max-width: 380px) {
     .header .header__logo {
         max-width: 138px;
@@ -282,72 +297,130 @@
         height: 60px;
     }
 
+    /*.tech_spec .tech_spec__description {*/
+    /*    max-width: none;*/
+    /*}*/
+
+    /*.tech_spec .tech_spec__description .tech_spec__info-wrapper {*/
+    /*    display: flex;*/
+    /*    align-items: flex-start;*/
+    /*    justify-content: space-between;*/
+    /*}*/
+
+    /*.tech_spec .tech_spec__description .tech_spec__btn {*/
+    /*    !*position: absolute;*!*/
+    /*    !*bottom: 30px;*!*/
+    /*    !*width: fit-content;*!*/
+    /*    position: relative;*/
+    /*    bottom: 14px;*/
+    /*}*/
+
+    /*.tech_spec .tech_spec__description .tech_spec__titles {*/
+    /*    !*height: 210px;*!*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*    justify-content: space-between;*/
+    /*    align-items: flex-start;*/
+    /*}*/
+
+    .tech_spec {
+        width: 100%;
+    }
+
+    .tech_spec.active {
+        width: fit-content;
+    }
+
+    .tech_spec .tech_spec__wrapper {
+        display: block;
+        position: static;
+    }
+
+    .tech_spec  .tech_spec__description .tech_spec__description-grid_wrapper {
+        grid-template-columns: repeat(2, max-content);
+        grid-template-rows: repeat(3, max-content);
+        /*gap: 24px;*/
+        grid-template-areas:
+    "tech_spec__titles tech_spec__outfit"
+    "tech_spec__mission tech_spec__outfit"
+    "tech_spec__button tech_spec__outfit";
+        max-width: unset;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper.hidden {
+        max-width: 340px;
+    }
+
     .tech_spec .tech_spec__description {
-        max-width: none;
+        padding: 20px 20px 100% 20px;
+        max-width: unset;
     }
 
-    .tech_spec .tech_spec__description .tech_spec__info-wrapper {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-    }
-
-    .tech_spec .tech_spec__description .tech_spec__btn {
-        /*position: absolute;*/
-        /*bottom: 30px;*/
-        /*width: fit-content;*/
-        position: relative;
-        bottom: 14px;
-    }
-
-    .tech_spec .tech_spec__description .tech_spec__titles {
-        /*height: 210px;*/
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
+    .tech_spec .tech_spec__description.hidden {
+        padding: 20px 10px 10px 20px;
     }
 
     .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__title {
         font-size: 24px;
     }
 
+    .tech_spec .tech_spec__description .tech_spec__mission {
+        max-width: 315px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__mission .tech_spec__text {
+        font-size: 16px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__mission .tech_spec__text-descr {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__outfit {
+        max-width: 440px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__outfit .tech_spec__outfit-text {
+        font-size: 10px;
+    }
+
     /*.tech_spec .tech_spec__description .tech_spec__titles .tech_spec__subtitle {*/
     /*    margin-bottom: 24px;*/
     /*}*/
 
-    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__mission {
-        max-width: 313px;
-        /*margin-bottom: 40px;*/
-        position: absolute;
-        top: 100px;
-        left: 30px;
-    }
+    /*.tech_spec .tech_spec__description .tech_spec__visible .tech_spec__mission {*/
+    /*    max-width: 313px;*/
+    /*    !*margin-bottom: 40px;*!*/
+    /*    position: absolute;*/
+    /*    top: 100px;*/
+    /*    left: 30px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit {
-        max-width: 440px;
-        margin-left: 74px;
-    }
+    /*.tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit {*/
+    /*    max-width: 440px;*/
+    /*    margin-left: 74px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__titles .tech_spec__subtitle, .tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text, .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__text {
-        font-size: 16px;
-    }
+    /*.tech_spec .tech_spec__titles .tech_spec__subtitle, .tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text, .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__text {*/
+    /*    font-size: 16px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text-descr {
-        font-size: 14px;
-    }
+    /*.tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text-descr {*/
+    /*    font-size: 14px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-text {
-        font-size: 10px;
-    }
+    /*.tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-text {*/
+    /*    font-size: 10px;*/
+    /*}*/
 
-    .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-list {
-        margin: 0;
-    }
+    /*.tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-list {*/
+    /*    margin: 0;*/
+    /*}*/
 
-    .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-item {
-        margin-bottom: 0;
-    }
+    /*.tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-item {*/
+    /*    margin-bottom: 0;*/
+    /*}*/
 
     /*.tech_spec__interior {*/
     /*    max-width: 80px !important;*/
@@ -373,12 +446,14 @@
         /*bottom: 112px !important;*/
         background: none !important;
         pointer-events: none;
+        z-index: 1;
     }
 
     .tech_spec__interior .tech_spec__interior-btn {
         position: absolute;
         width: 100%;
-        max-width: fit-content;
+        /*max-width: fit-content;*/
+        max-width: max-content;
         top: 20px;
         right: 20px;
         backdrop-filter: blur(6px);
@@ -402,7 +477,8 @@
 
     .auto_park .auto_park_wrapper {
         height: auto;
-        padding: 20px 20px 40px 20px;
+        /*padding: 20px 20px 40px 20px;*/
+        padding: 20px 20px 30px 20px;
     }
 
     .auto_park .auto_park_wrapper .auto_park_slider .gallery_item img {
@@ -412,5 +488,45 @@
 
     .auto_park_slider-button button.next_button, .auto_park_slider-button button.prev_button {
         bottom: 38px !important;
+    }
+}
+
+@media screen and (max-width:820px) and (orientation:landscape) {
+    .tech_spec .tech_spec__description .tech_spec__outfit {
+        max-width: unset;
+    }
+
+    .tech_spec .tech_spec__text {
+        max-width: max-content;
+    }
+
+    .tech_spec .tech_spec__outfit-list {
+        flex-wrap: nowrap;
+        overflow: auto;
+        max-width: 33.33%;
+    }
+}
+
+@media screen and (max-height:400px) and (orientation:landscape) {
+    .tech_spec .tech_spec__titles.hidden {
+        margin-bottom: 18px;
+    }
+}
+
+@media screen and (max-height:370px) and (orientation:landscape) {
+    .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
+        gap: 10px 24px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__mission .tech_spec__text {
+        margin-bottom: 8px;
+    }
+
+    .auto_park .auto_park_wrapper {
+        padding: 10px 20px 30px 20px;
+    }
+
+    .auto_park .auto_park__control {
+        margin-bottom: 10px;
     }
 }
