--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,589 +1,4 @@
 @import '../style/base.css';
 @import "../style/loader.css";
-@import "../style/media.css";
-
-/*control*/
-/*header*/
-/*tech_spec*/
-/*auto_park*/
-
-/*scene interior a-frame*/
-
-/*a-scene {*/
-/*    display: none;*/
-/*}*/
-
-#Canvas_wrapper {
-    background-color: yellow;
-    width: 100%;
-    height: 100%;
-}
-
-a-scene {
-    opacity: 0;
-    height: 0;
-    pointer-events: none;
-}
-
-.a-enter-vr.fullscreen .a-enter-vr-button {
-    display: none !important;
-}
-
-/*control*/
-
-.control_wrapper {
-    width: 100%;
-    background-color: #000000;
-}
-
-.control_buttons {
-    width: 600px;
-    height: 70px;
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.go_to, .interior {
-    padding: 20px 20px;
-    color: black;
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.go_to {
-    background-color: #62a744;
-}
-
-.interior {
-    background-color: #FF69B4;
-}
-
-.Mytext {
-    display: none;
-    max-width: 280px;
-    /*width: 100%;*/
-    height: auto;
-}
-
-.tooltip_wrapper {
-    display: flex;
-    background: rgba(9, 9, 9, 0.50);
-    backdrop-filter: blur(6px);
-    border-radius: 16px;
-    padding: 20px;
-    gap: 16px;
-}
-
-.tooltip {
-    font-family: 'MoscowSans', sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    color: white;
-}
-
-.tooltip_wrapper svg {
-    min-width: min-content;
-}
-
-.Mytext.show {
-    display: block;
-}
-
-.Mytext.hide {
-    display: none;
-}
-
-
-/*header*/
-
-.header {
-    position: relative;
-    z-index: 1;
-    background-color: #090909;
-
-}
-
-.header__wrapper, .header__logo, .header__info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header__logo {
-    max-width: 170px;
-    width: 100%;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.header__logo-text {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    margin-left: 12px;
-}
-
-.header__info {
-    max-width: 300px;
-    width: 100%;
-}
-
-.header__info-descr {
-    width: 148px;
-    margin-left: 10px;
-}
-
-.header__logo-text, .header__info-text {
-    color: white;
-}
-
-.header__info-text {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-}
-
-.header__info-text:last-child {
-    font-family: 'MoscowSans', sans-serif;
-    margin-top: 4px;
-    font-weight: 300;
-    font-size: 12px;
-    opacity: 0.4;
-}
-
-.header__info-img {
-    width: 142px;
-    object-fit: cover;
-}
-
-/*tech_spec*/
-
-.tech_spec {
-    position: absolute;
-    z-index: 1;
-    width: -webkit-fill-available;
-}
-
-.tech_spec .container {
-    position: relative;
-}
-
-.tech_spec__wrapper {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: absolute;
-}
-
-.tech_spec__description.hidden, .auto_park_wrapper.hidden, .auto_park_slider-button button.hidden {
-    visibility: hidden !important;
-}
-
-.tech_spec__description {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding: 20px 30px;
-    background: rgba(9, 9, 9, 0.50);
-    backdrop-filter: blur(6px);
-    border-radius: 30px;
-    width: 100%;
-    max-width: 410px;
-}
-
-/* CSS стили для анимации */
-.tech_spec__visible {
-    opacity: 1;
-    height: auto;
-    pointer-events: auto; /* Включаем обработку событий мыши по умолчанию */
-    overflow: hidden; /* Скрываем содержимое, которое не помещается в высоту блока */
-    max-height: 1000px; /* Максимальная высота блока */
-    /*transition: opacity 0.5s ease, max-height 0.5s cubic-bezier(0.5, 0.5, 0.5, 0.5);*/
-    transition: all .8s ease;
-}
-.tech_spec__visible.hidden {
-    /*display: none;*/
-    opacity: 0;
-    max-height: 0; /* Устанавливаем максимальную высоту блока на 0 */
-    transition: all .8s ease;
-}
-
-.tech_spec__titles .text_spec__texts, .tech_spec__mission {
-    margin-bottom: 24px;
-}
-
-.tech_spec__title {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 800;
-    font-size: 30px;
-    margin-bottom: 8px;
-}
-
-.tech_spec__subtitle {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    opacity: 0.4;
-}
-
-.tech_spec__text {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    margin-bottom: 12px;
-}
-
-.tech_spec__text-descr {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-}
-
-.tech_spec__outfit {
-    margin-bottom: 4px;
-}
-
-.tech_spec__outfit .tech_spec__text {
-    margin-bottom: 16px;
-}
-
-.tech_spec__outfit-list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    gap: 10px;
-}
-
-.tech_spec__outfit-item {
-    max-width: 80px;
-    width: 100%;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.tech_spec__outfit-img {
-    position: relative;
-    width: 80px;
-    height: 65px;
-    border: 1px solid #FFFFFF;
-    border-radius: 6px;
-}
-
-.tech_spec__outfit-img img {
-    display: block;
-    margin: 0 auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.tech_spec__outfit-text {
-    display: inline-block;
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 11px;
-    line-height: 12px;
-    margin-top: 4px;
-}
-
-/*.tech_spec__btn-copied {*/
-/*    display: none;*/
-/*}*/
-
-.tech_spec__btn, .tech_spec__btn-copied {
-    padding: 14px 12px;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px;
-    color: white;
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-}
-
-.tech_spec__btn span, .tech_spec__btn-copied span {
-    color: white;
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    margin-right: 12px;
-    transition: transform 0.3s ease;
-}
-
-.tech_spec__btn img {
-    transition: transform 0.3s ease;
-    transform: rotate(180deg);
-}
-
-.tech_spec__btn img.rotate {
-    transform: rotate(0) scale(1);
-}
-
-/*.tech_spec__btn:hover {*/
-/*    background-color: #313131;*/
-/*}*/
-
-/*.tech_spec__btn:hover img {*/
-/*    transform: rotate(180deg) scale(1.2) translateY(-2px);*/
-/*}*/
-
-/*.tech_spec__btn:hover img.rotate {*/
-/*    transform: rotate(0) scale(1.2) translateY(-2px);*/
-/*}*/
-
-.tech_spec__btn-copied {
-    display: none;
-}
-
-.tech_spec__interior {
-    position: absolute;
-    right: 0;
-    max-width: 200px;
-    width: 100%;
-    height: 124px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    border-radius: 20px;
-    /*background: url("../img/layout/amarok_prew.png") no-repeat center/cover;*/
-    padding: 8px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-right: 60px;
-    z-index: 1 !important;
-}
-
-.tech_spec__interior#amarok {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
-
-.tech_spec__interior#amarok.garage_amarok {
-    background-image: url("../img/layout/slider/amarok.png");
-}
-
-.tech_spec__interior#ford {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
-
-.tech_spec__interior#ford.garage_ford {
-    background-image: url("../img/layout/slider/ford.png");
-}
-
-.tech_spec__interior#solaris_green {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
-
-.tech_spec__interior#solaris_green.garage_solaris_green {
-    background-image: url("../img/layout/slider/solaris_green.png");
-}
-
-.tech_spec__interior#solaris_gray {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
-
-.tech_spec__interior#solaris_gray.garage_solaris_gray {
-    background-image: url("../img/layout/slider/solaris_gray.png");
-}
-
-.tech_spec__interior#bus {
-    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;
-}
-
-.tech_spec__interior#bus.garage_bus {
-    background-image: url("../img/layout/slider/bus.png");
-}
-
-/*.tech_spec__interior:hover .arrow-wrapper img {*/
-/*    margin-left: 3px;*/
-/*}*/
-
-.tech_spec__interior-btn {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 80px;
-    width: 100%;
-}
-
-.tech_spec__interior-text {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    margin-right: 4px;
-}
-
-.tech_spec__interior-before {
-    position: relative;
-    width: 24px;
-    height: 24px;
-}
-
-.arrow-wrapper {
-    position: relative;
-    width: 24px;
-    height: 24px;
-    background: #090909;
-    border-radius: 8px;
-}
-
-.arrow-wrapper > img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: all 0.3s ease;
-}
-
-
-/*auto_park*/
-
-.auto_park {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    /*margin-bottom: 60px;*/
-    transition: transform 0.3s ease;
-    /*transform: translateY(100%);*/
-    transform: translateY(74%);
-}
-
-.auto_park .container {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    z-index: 1;
-}
-
-.auto_park_wrapper {
-    background-color: #090909;
-    border: 1px solid #FFFFFF;
-    backdrop-filter: blur(6px);
-    border-radius: 12px;
-    height: 224px;
-    padding: 20px;
-    width: min-content;
-    max-width: 100%;
-}
-
-.auto_park__control {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-
-.auto_park__control img {
-    transition: transform 0.3s ease;
-    transform: rotate(180deg);
-}
-
-.auto_park__control img.rotate {
-    transform: rotate(0);
-}
-
-/*.auto_park__control:hover img {*/
-/*    transform: rotate(180deg) scale(1.2) translateY(-4px);*/
-/*}*/
-
-/*.auto_park__control:hover img.rotate  {*/
-/*    transform: rotate(0) scale(1.2) translateY(-4px);*/
-/*}*/
-
-.auto_park__title {
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    color: #FFFFFF;
-}
-
-.auto_park_slider {
-    position: relative;
-}
-
-.auto_park_slider-overflow{
-    overflow: hidden;
-}
-
-.auto_park_slider-wrapper {
-    display: flex;
-    transition: transform 0.3s ease;
-}
-
-.gallery_item {
-    cursor: pointer;
-    margin: 0 2px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    border: 1px solid #090909;
-    transition: transform 0.3s ease;
-}
-
-/*.gallery_item:hover, .gallery_item.active {*/
-/*    border: 1px solid #62A744;*/
-/*}*/
-
-/*.gallery_item:hover img, .gallery_item.active img {*/
-/*    filter: grayscale(0);*/
-/*}*/
-
-.gallery_item img {
-    object-fit: cover;
-    filter: grayscale(100%);
-    transition: transform 0.3s ease;
-    width: 210px;
-    height: 140px;
-    border-radius: 10px;
-}
-
-.auto_park_slider-button {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    visibility: hidden;
-}
-
-.auto_park_slider-button button {
-    width: 24px;
-    height: 24px;
-    border-radius: 8px;
-    border: 1px solid #FFFFFF;
-    background: #090909;
-    cursor: pointer;
-    position: relative;
-}
-
-.auto_park_slider-button button img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.auto_park_slider-button button.prev_button {
-    position: absolute;
-    left: 0;
-    bottom: 58px;
-}
-
-.auto_park_slider-button button.next_button {
-    transform: rotate(180deg);
-    position: absolute;
-    right: 0;
-    bottom: 58px;
-}
+@import "../style/style_models.css";
+@import "../style/media_models.css";
